force-app/main/default/objects/Property__c/fields/Allocated_Car_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Car_Spaces__c</fullName>
    <label>Allocated Car Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>