force-app/main/default/objects/Property__c/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <inlineHelpText>The date at which the rent will increase each year</inlineHelpText>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>