force-app/main/default/objects/Property__c/fields/Bank_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee__c</fullName>
    <label>Bank Guarantee</label>
    <type>TextArea</type>
</CustomField>