force-app/main/default/objects/Property__c/fields/Building_Manager__c.field-meta.xml
<CustomField>
    <fullName>Building_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property (Building Manager)</relationshipLabel>
    <relationshipName>Property1</relationshipName>
    <type>Lookup</type>
</CustomField>