force-app/main/default/objects/Property__c/fields/Comments_Misc_Items__c.field-meta.xml
<CustomField>
    <fullName>Comments_Misc_Items__c</fullName>
    <label>Comment/Misc Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>