force-app/main/default/objects/Property__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>TextArea</type>
</CustomField>