force-app/main/default/objects/Property__c/fields/Holdover__c.field-meta.xml
<CustomField>
    <fullName>Holdover__c</fullName>
    <label>Holdover</label>
    <type>TextArea</type>
</CustomField>