force-app/main/default/objects/Property__c/fields/Incentives__c.field-meta.xml
<CustomField>
    <fullName>Incentives__c</fullName>
    <label>Incentives</label>
    <type>TextArea</type>
</CustomField>