force-app/main/default/objects/Property__c/fields/Internal_Size__c.field-meta.xml
<CustomField>
    <fullName>Internal_Size__c</fullName>
    <label>Internal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>