force-app/main/default/objects/Property__c/fields/Landlord_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Phone_Number__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>