force-app/main/default/objects/Property__c/fields/Moving_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Moving_In_Date__c</fullName>
    <label>Lease Commencement Date</label>
    <type>Date</type>
</CustomField>