force-app/main/default/objects/Property__c/fields/Moving_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Moving_Out_Date__c</fullName>
    <label>Lease Expiry Date</label>
    <type>Date</type>
</CustomField>