force-app/main/default/objects/Property__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>