force-app/main/default/objects/Property__c/fields/Outgoings__c.field-meta.xml
<CustomField>
    <fullName>Outgoings__c</fullName>
    <label>Outgoings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>