force-app/main/default/objects/Property__c/fields/Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>