force-app/main/default/objects/Property__c/fields/Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount__c</fullName>
    <description>How much is the rent in the first year</description>
    <label>First Year Rent Amount ($)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>