force-app/main/default/objects/Property__c/fields/Rent_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Commencement_Date__c</fullName>
    <inlineHelpText>Date at which rent has to be paid for the first time.</inlineHelpText>
    <label>Rent Start Date</label>
    <type>Date</type>
</CustomField>