force-app/main/default/objects/Property__c/fields/Rent_Free_Period__c.field-meta.xml
<CustomField>
    <fullName>Rent_Free_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was there a rent free period?</description>
    <label>Rent Free Period</label>
    <type>Checkbox</type>
</CustomField>