force-app/main/default/objects/Property__c/fields/Rent_Free_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Rent_Free_Period_Months__c</fullName>
    <description>The number of months for the rent free period</description>
    <inlineHelpText>The number of months for the rent free period</inlineHelpText>
    <label>Rent Free Period (Month)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>