force-app/main/default/objects/Property__c/fields/Rent_Increase__c.field-meta.xml
<CustomField>
    <fullName>Rent_Increase__c</fullName>
    <description>The percentage at which the rent is expected to increase in the subsequent years</description>
    <label>Rent Increase (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>