force-app/main/default/objects/Property__c/fields/Rent_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Rent_Payment_Due__c</fullName>
    <inlineHelpText>The date that rent payment will be due in each period</inlineHelpText>
    <label>Rent Payment Due</label>
    <type>Date</type>
</CustomField>