force-app/main/default/objects/Property__c/fields/Rent_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rent_Payment_Frequency__c</fullName>
    <inlineHelpText>How often is the rent paid</inlineHelpText>
    <label>Rent Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Fortnight</fullName>
                <label>Fortnightly</label>
            </value>
            <value>
                <fullName>Month</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Annual</fullName>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>