force-app/main/default/objects/Property__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>