force-app/main/default/objects/Property__c/fields/Strata_Manager__c.field-meta.xml
<CustomField>
    <fullName>Strata_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strata Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property (Strata Manager)</relationshipLabel>
    <relationshipName>Property3</relationshipName>
    <type>Lookup</type>
</CustomField>