force-app/main/default/objects/Property__c/fields/Tenure_Number__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Number__c</fullName>
    <label>Tenure Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>