force-app/main/default/objects/Property__c/fields/Term_Year__c.field-meta.xml
<CustomField>
    <fullName>Term_Year__c</fullName>
    <label>Term (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>