force-app/main/default/objects/Property__c/fields/Type_of_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Tenure__c</fullName>
    <label>Type of Tenure</label>
    <type>TextArea</type>
</CustomField>