force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Landlord__c</columns>
    <columns>Property_Manager__c</columns>
    <columns>Strata_Manager__c</columns>
    <columns>Building_Manager__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Property</group>
    </sharedTo>
</ListView>