force-app/main/default/objects/Property__c/listViews/Property_Starting_Dates.listView-meta.xml
<ListView>
    <fullName>Property_Starting_Dates</fullName>
    <columns>NAME</columns>
    <columns>Moving_In_Date__c</columns>
    <columns>Rent_Commencement_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Property Starting Dates</label>
</ListView>